# coinbase_bot

./: Cargo.toml  README.md  perf.data  trades.json
src/: account.rs  candlestick.rs  coin.rs  main.rs  model.rs  trading_bot.rs  util.rs
src/indicators/: adx.rs  atr.rs  bollinger_bands.rs  ema.rs  macd.rs  mod.rs  obv.rs  rsi.rs  stoch.rs  stoch_rsi.rs
src/model/: account.rs  candlestick.rs  channel.rs  event.rs  fee.rs  mod.rs  order.rs
src/old/: model.rs  util.rs
src/old/indicators/: bollinger_bands.rs  macd.rs  order_book.rs
