[package]
name = "coinbase"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["tls"] }
url = "*"
futures = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
dotenv="*"
sha2="*"
hmac="*"
chrono = { version = "*", features = ["serde"] }
hex="*"
rust_decimal = {version = "*", features = ["maths"]}
rust_decimal_macros = "*"
rayon = "*"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11.20", features = ["json","blocking"] }
anyhow = "1.0.75"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
