[package]
name = "coinbase"
version = "0.9.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release-lto]
inherits = "release"
lto = true

[dependencies]
url = "*"
futures = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
dotenv="*"
sha2="*"
hmac="*"
chrono = { version = "*", features = ["serde"] }
hex="*"
rust_decimal = {version = "*", features = ["maths"]}
rust_decimal_macros = "*"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11.20", features = ["json","blocking"] }
anyhow = "1.0.75"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
smallvec = { version = "*", features = ["serde"]}
tungstenite = { version = "*", features = ["native-tls"] }
native-tls="*"